Revision history for {{$dist->name}}

{{$NEXT}}

0.50      2019-01-14 10:49:47 -0500
  - Fixed a testing bug that was reportd on Debian Buster.

0.49      2018-07-09 21:06:24 -0400
  - Fixed a bug whre adding next_message callback within a next_message
    callback was called immediately with the same message (gh#39 xavery++)

0.48      2018-05-21 21:08:49 -0400
  - Production version functionally identical to the 0.47_01 release.

0.47_01   2018-05-20 09:35:23 -0400
  - Add max_fragments attribute ot AnyEvent::WebSocket::Client
  - Add max_fragments attribute ot AnyEvent::WebSocket::Connection

0.46      2018-04-07 16:39:29 -0400
  - Production version functionally identical to the 0.45_01 release.

0.45_01   2018-04-04 17:01:03 -0400
  - add env_proxy property to AnyEvent::WebSocket::Client (gh#36 gh#37 TOSHIOITO++)

0.44      2017-12-12 15:37:51 -0500
  - Compatibility with 0.22.

0.43      2017-10-19 17:06:51 -0400
  - Production version functionally identical to the 0.42_01 release.

0.42_01   2017-10-18 11:45:16 -0400
  - You can now unregister event callbacks.
  - The 'on' method for AnyEvent::WebSocket::Connection now returns a
    code ref that can be used to unregister the callback.
  - The 'each_message' event also gets a code ref that can be used to
    unregister the callback.

  [WARNING: change in behavior]
  - The 'on' method for AnyEvent::WebSocket::Connection used to return
    the connection object, the intent was to allow chaining of 'on' calls,
    but this was never documented, and I don't believe it was ever used.
  - The 'each_message' event has a different number of arguments, which
    could break code that is using 'pop' to get the message instead of
    using the second argument position.  If you were following the examples
    in the documentation you wouldn't have done this.

0.41      2017-08-11 14:05:40 -0400
  - Production version functionally identical to the 0.40_03 release.  

0.40_03   2017-08-10 14:53:41 -0400